// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render controls 1`] = `
<div>
  <div
    class="controls light"
  />
</div>
`;

exports[`Render controls with children 1`] = `
<div>
  <div
    class="controls light"
  >
    <button
      class="button light"
      type="button"
    >
      <span
        class="label"
      >
        Test
      </span>
    </button>
  </div>
</div>
`;

exports[`Render growing controls 1`] = `
<div>
  <div
    class="controls light grow"
  />
</div>
`;
